# nr-docs

./: .assets  .env  .eslintrc.js  .gitignore  .invenio  .oarepo-user.yaml  README.md  abc  debug_repository.py  def  invenio.cfg  jsconfig.json  node_modules  nrp  nrp-hydrate  oarepo.yaml  obd_data.json  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  variables
local/nr-docs-extensions/: .coveragerc  MANIFEST.in  README.rst  setup.cfg
local/nr-docs-extensions/nr_docs_extensions/oai/readers/: s3.py
local/nr-docs-extensions/nr_docs_extensions/services/: config.py  filtered_json_ui_serializer.py  filtered_record_list.py  filtered_ui_schema.py  published_service.py  sort.py
local/nr-docs-extensions/nr_docs_extensions/translations/cs/LC_MESSAGES/: messages.mo  messages.po
local/nr-docs-extensions/nr_docs_extensions/views/records/: published.py
models/nr-documents/: .gitignore  harvest.yaml  model.yaml  requests.yaml  setup.cfg
models/nr-documents-bak2/: setup.cfg
models/nr-documents-bak2/nr_documents/records/jsonschemas/: nr_documents-1.0.0.json
models/nr-documents-bak2/nr_documents/resources/records/: config.py  resource.py  ui.py
models/nr-documents-bak2/nr_documents/services/records/: config.py  permissions.py  search.py  service.py  ui_schema.py
models/nr-documents-bak2/nr_documents/translations/en/LC_MESSAGES/: messages.po
models/nr-documents-bak2/tests/: test_resource.py  test_resources.py
models/nr-documents-bak2/tests/requests/: test_requests.py
models/nr-documents/data/: sample_data.yaml
models/nr-documents/nr_documents/: config.py  ext.py  proxies.py
models/nr-documents/nr_documents/alembic/: 1e85709862d0_nrp_install_revision.py  2482918e596f_nrp_install_revision.py  3228b523dbbe_nrp_install_revision.py  4df3724483aa_nrp_install_revision.py  af481b685ce7_nrp_install_revision.py  dd8a4525f287_initial_revision.py  nr_documents_1_create_nr_documents_branch_for_nr_.py  nr_documents_2_initial_revision.py  nr_documents_3_drafts.py  nr_documents_3_nrp_cli_install_revision.py  nr_documents_3_nrp_install_revision.py  nr_documents_4_nrp_install_revision.py
models/nr-documents/nr_documents/files/: api.py  models.py
models/nr-documents/nr_documents/files/dumpers/: edtf.py
models/nr-documents/nr_documents/models/: files.json  model.json  records.json  ui.json
models/nr-documents/nr_documents/records/: api.py  dumper.py  models.py  multilingual_dumper.py
models/nr-documents/nr_documents/records/dumpers/: dumper.py  edtf.py
models/nr-documents/nr_documents/records/jsonschemas/: nr_documents-1.0.0.json  parent-v1.0.0.json
models/nr-documents/nr_documents/records/requests/: resolvers.py
models/nr-documents/nr_documents/records/requests/default_request/: actions.py  types.py
models/nr-documents/nr_documents/records/requests/delete_record/: types.py
models/nr-documents/nr_documents/records/requests/publish_draft/: types.py
models/nr-documents/nr_documents/requests/: actions.py
models/nr-documents/nr_documents/resources/community_records/: config.py  resource.py  ui.py
models/nr-documents/nr_documents/resources/files/: config.py  resource.py  ui.py
models/nr-documents/nr_documents/resources/record_communities/: config.py  resource.py  ui.py
models/nr-documents/nr_documents/resources/records/: config.py  ui.py
models/nr-documents/nr_documents/services/community_records/: config.py  service.py  ui_schema.py
models/nr-documents/nr_documents/services/files/: config.py  permissions.py  schema.py  service.py  ui_schema.py
models/nr-documents/nr_documents/services/files/published/: config.py  service.py
models/nr-documents/nr_documents/services/record_communities/: config.py  service.py  ui_schema.py
models/nr-documents/nr_documents/services/records/: config.py  facets.py  permissions.py  schema.py  search.py  service.py  ui_schema.py
models/nr-documents/nr_documents/services/records/published/: config.py  service.py
models/nr-documents/nr_documents/services/requests/: config.py
models/nr-documents/nr_documents/translations/: messages.pot
models/nr-documents/nr_documents/translations/cs/LC_MESSAGES/: messages.mo  (+1 more)
models/nr-documents/nr_documents/views/community_records/: api.py  app.py
models/nr-documents/nr_documents/views/draft_files/: api.py  app.py
models/nr-documents/nr_documents/views/files/: api.py  app.py
models/nr-documents/nr_documents/views/record_communities/: api.py  app.py
models/nr-documents/nr_documents/views/records/: api.py  app.py
models/nr-documents/tests/: conftest.py  customfields.py  data1.json  test_resource.py  test_service.py
models/nr-documents/tests/communities/: conftest.py  test_community_records_resources.py  test_record_communities_resources.py
models/nr-documents/tests/complex-data/: .~lock.accessRights.xlsx#
models/nr-documents/tests/files/: conftest.py
models/nr-documents/tests/requests/: conftest.py  test_requests.py
sites/nr-docs/: .check.ok  .envrc  .gitignore  .invenio  .pdm-python  Pipfile  README.md  build.sh  datapoint.json  docker-compose.development.yml  docker-compose.full.yml  docker-compose.yml  docker-services.yml  invenio.cfg  invenio.cfg.new  invenio.nusl.cz.xml  pyproject.toml  requirements.txt  variables
sites/nr-docs/assets/less/: theme.config  theme.less
sites/nr-docs/assets/less/site/: css.overrides
sites/nr-docs/data/.minio.sys/: format.json
sites/nr-docs/development/: Dockerfile
sites/nr-docs/docker/: Dockerfile  Dockerfile.development  Dockerfile.prod  Dockerfile.production
sites/nr-docs/docker/pgadmin/: servers.json
sites/nr-docs/docker/uwsgi/: uwsgi.ini
sites/nr-docs/site/: .gitkeep  setup.cfg
sites/nr-docs/site/nr_docs/: views.py  webpack.py
sites/nr-docs/site/nr_docs/translations/: jinjax_messages.jinja  messages.pot
ui/docs-app/: .gitignore  README.md  setup.cfg
ui/docs-app/docs_app/: __init__.py  config.py  ext.py  proxies.py  views.py
ui/docs-app/docs_app/resources/: config.py  resource.py
ui/docs-app/docs_app/theme/: webpack.py
ui/docs-app/docs_app/translations/: messages.pot
(+572 files in other folders)
