[project]
name = "repo"
version = "1.0.0"
description = ""
packages = []
authors = []
dependencies = [
    "deepmerge>=1.1.0",
    "invenio-drafts-resources>=1.0.4",
    "json5",
    "nr-metadata>=2.0.0",
    "nr-oaipmh-harvesters>=1.0.0",
    "nr-vocabularies>=2.0.8",
    "oarepo-dashboard>=1.0.0",
    "oarepo-global-search>=1.0.7",
    "oarepo-published-service>=1.0.0",
    "oarepo-published-service>=1.0.2",
    "oarepo-requests>=1.0.2",
    "oarepo-runtime",
    "oarepo-ui",
    "oarepo-vocabularies",
    "oarepo[s3]==12.*",
    "python-dotenv",
]
requires-python = ">=3.10,<3.11"

[project.entry-points."invenio_assets.webpack"]
branding = "ui.branding.webpack:theme"
i18n = "i18n.webpack:theme"
components = "ui.components.webpack:theme"
ui_documents = "ui.documents.webpack:theme"

[project.entry-points."invenio_base.blueprints"]
branding = "ui.branding:create_blueprint"
titlepage = "ui.titlepage:create_blueprint"
components = "ui.components:create_blueprint"
documents = "documents.views.records.app:create_app_blueprint"
documents_file = "documents.views.files.app:create_app_blueprint"
documents_file_draft = "documents.views.draft_files.app:create_app_blueprint"
ui_documents = "ui.documents:create_blueprint"
documents_requests = "documents.views.requests.api:create_api_blueprint"
ui_community_records = "ui.community_records:create_blueprint"

[project.entry-points."invenio_i18n.translations"]
translations = "i18n"
documents = "documents"
documents_file = "documents"
transifex = "common.transifex"

[project.entry-points."invenio_base.api_apps"]
documents = "documents.ext:DocumentsExt"
oai_s3_harvester = "common.ext:OaiS3HarvesterExt"

[project.entry-points."invenio_base.apps"]
documents = "documents.ext:DocumentsExt"
oai_s3_harvester = "common.ext:OaiS3HarvesterExt"

[project.entry-points."invenio_db.alembic"]
documents = "common:alembic"

[project.entry-points."invenio_db.models"]
documents = "documents.records.models"
documents_file = "documents.files.models"
documents_file_draft = "documents.files.models"

[project.entry-points."invenio_base.api_blueprints"]
documents = "documents.views.records.api:create_api_blueprint"
documents_file = "documents.views.files.api:create_api_blueprint"
documents_file_draft = "documents.views.draft_files.api:create_api_blueprint"
documents_requests = "documents.views.requests.api:create_api_blueprint"

[project.entry-points."invenio_search.mappings"]
documents = "documents.records.mappings"

[project.entry-points."invenio_jsonschemas.schemas"]
documents = "documents.records.jsonschemas"

[project.entry-points."oarepo.models"]
documents = "documents.models:records.json"

[project.entry-points."oarepo.ui"]
documents = "documents.models:ui.json"
documents_file = "documents.models:ui.json"

[project.entry-points."invenio_requests.types"]
delete_record = "oarepo_requests.types.delete_record:DeleteRecordRequestType"
edit_record = "oarepo_requests.types.edit_record:EditRecordRequestType"
publish_draft = "oarepo_requests.types.publish_draft:PublishDraftRequestType"
documents_delete_record = "documents.records.requests.delete_record.types:DeleteRecordRequestType"
documents_edit_record = "documents.records.requests.edit_record.types:EditRecordRequestType"

[project.optional-dependencies]
tests = [
    "pytest-invenio>=1.4.11",
]

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"

[build_system]
requires = [
    "setuptools",
    "wheel",
    "babel>2.8",
]
build-backend = "setuptools.build_meta"

[tool.pdm]
