[project]
name = "repo"
version = "1.0.0"
description = ""
packages = []
authors = []
dependencies = [
    "deepmerge>=1.1.0",
    "json5",
    "marshmallow-i18n-messages",
    "nr-metadata>=2.0.0",
    "nr-oaipmh-harvesters>=1.0.0",
    "nr-vocabularies>=2.0.8",
    "oarepo-citations>=1.0.0,<2.0.0",
    "oarepo-communities>=5.0.0,<6.0.0",
    "oarepo-dashboard>=1.0.0,<2.0.0",
    "oarepo-doi>=2.0.0,<3.0.0",
    "oarepo-glitchtip>=1.0.0,<2.0.0",
    "oarepo-global-search>=1.0.13,<2.0.0",
    "oarepo-oidc-einfra>=1.0.0,<2.0.0",
    "oarepo-published-service>=1.0.3,<2.0.0",
    "oarepo-rdm>=0.5.0,<1.0.0",
    "oarepo-requests>=2.0.0,<3.0.0",
    "oarepo-runtime>=1.0.0,<2.0.0",
    "oarepo-ui>=5.0.0,<6.0.0",
    "oarepo-vocabularies>=2.0.0,<3.0.0",
    "oarepo-workflows>=1.0.0,<2.0.0",
    "oarepo[s3,rdm]>=12.1.0,<13.0.0",
    "python-dotenv",
]
requires-python = ">=3.12,<3.13"

[project.entry-points."invenio_assets.webpack"]
branding = "ui.branding.webpack:theme"
i18n = "i18n.webpack:theme"
components = "ui.components.webpack:theme"
ui_documents = "ui.documents.webpack:theme"

[project.entry-points."invenio_base.blueprints"]
branding = "ui.branding:create_blueprint"
titlepage = "ui.titlepage:create_blueprint"
components = "ui.components:create_blueprint"
documents = "documents.views.records.app:create_app_blueprint"
documents_file = "documents.views.files.app:create_app_blueprint"
documents_file_draft = "documents.views.draft_files.app:create_app_blueprint"
ui_documents = "ui.documents:create_blueprint"
documents_requests = "documents.views.requests.app:create_app_blueprint"
documents_request_types = "documents.views.request_types.app:create_app_blueprint"
# should be in app rdm patches
invenio_app_rdm_administration = "invenio_app_rdm.administration.views:create_ui_blueprint"
nusl_redirect = "common.resources.redirect:nusl_redirect_blueprint"

[project.entry-points."invenio_i18n.translations"]
translations = "i18n"
documents = "documents"
documents_file = "documents"

[project.entry-points."invenio_base.api_apps"]
documents = "documents.ext:DocumentsExt"
oai_s3_harvester = "common.ext:OaiS3HarvesterExt"
actions_permissions = "common.ext:ActionPermissionsExt"

[project.entry-points."invenio_base.apps"]
documents = "documents.ext:DocumentsExt"
oai_s3_harvester = "common.ext:OaiS3HarvesterExt"
actions_permissions = "common.ext:ActionPermissionsExt"

[project.entry-points."invenio_db.alembic"]
documents = "common:alembic"

[project.entry-points."invenio_db.models"]
documents = "documents.records.models"
documents_file = "documents.files.models"
documents_file_draft = "documents.files.models"

[project.entry-points."invenio_base.api_blueprints"]
documents = "documents.views.records.api:create_api_blueprint"
documents_file = "documents.views.files.api:create_api_blueprint"
documents_file_draft = "documents.views.draft_files.api:create_api_blueprint"
documents_requests = "documents.views.requests.api:create_api_blueprint"
documents_request_types = "documents.views.request_types.api:create_api_blueprint"


[project.entry-points."invenio_search.mappings"]
documents = "documents.records.mappings"

[project.entry-points."invenio_jsonschemas.schemas"]
documents = "documents.records.jsonschemas"

[project.entry-points."oarepo.models"]
documents = "documents.models:records.json"

[project.entry-points."oarepo.ui"]
documents = "documents.models:ui.json"
documents_file = "documents.models:ui.json"

[project.entry-points."invenio.documents_files.error_handlers"]
invalid_file_extension = "common.services.files.allowed_document_extensions:ERROR_HANDLERS"

[project.entry-points."invenio.documents_draft_files.error_handlers"]
invalid_file_extension = "common.services.files.allowed_document_extensions:ERROR_HANDLERS"

[project.entry-points."invenio.documents_record.request_bodyparsers"]
zenodo_to_nr_docs = "common.resources.zenodo_to_nr_docs:REQUEST_BODY_PARSERS"

[project.entry-points."invenio_access.actions"]
direct_publish_action = "common.workflows.default:direct_publish_action"

[project.entry-points."invenio.documents.response_handlers"]
csl_citation = "common.resources.citations:citations_response_handlers"

# should be in app rdm patches
[project.entry-points."invenio_administration.views"]
invenio_users_resources_users_list = "invenio_app_rdm.administration.users:UsersListView"
invenio_users_resources_users_details = "invenio_app_rdm.administration.users:UsersDetailView"
# invenio_users_resources_domains_list = "invenio_app_rdm.administration.domains:DomainsListView"
# invenio_users_resources_domains_edit = "invenio_app_rdm.administration.domains:DomainsEditView"
# invenio_users_resources_domains_detail = "invenio_app_rdm.administration.domains:DomainsDetailView"
# invenio_users_resources_domains_create = "invenio_app_rdm.administration.domains:DomainsCreateView"
# invenio_requests_user_moderation_list = "invenio_app_rdm.administration.user_moderation:UserModerationListView"
# invenio_requests_user_moderation_detail = "invenio_app_rdm.administration.user_moderation:UserModerationRequestDetailView"
invenio_app_rdm_records_list = "invenio_app_rdm.administration.records:RecordAdminListView"
invenio_app_rdm_drafts_list = "invenio_app_rdm.administration.records:DraftAdminListView"

[project.optional-dependencies]
tests = [
    "pytest-invenio>=1.4.11",
]

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"

[tool.pdm]
