[metadata]
name = nr_docs_extensions
version = 1.0.0
description = Project short description.
long_description = file: README.rst, HISTORY.rst
author = Juraj Trappl
author_email = contact@domain.tld
url = https://domain.tld

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    oarepo-published-service

[options.entry_points]
invenio_i18n.translations =
    messages = nr_docs_extensions

invenio_base.api_apps =
    nr_docs_extensions.oai_s3_harvester = nr_docs_extensions.ext:OaiS3HarvesterExt

invenio_base.api_apps =
    nr_docs_extensions.oai_s3_harvester = nr_docs_extensions.ext:OaiS3HarvesterExt

[options.extras_require]
testing =
    pytest
    # TODO: put package testing requirements here
develop =
    bumpversion
    coverage
    flake8
    mypy
    sphinx
    watchdog
    wheel
    # TODO: put package develop requirements here

[options.packages.find]
exclude =
    tests
    # TODO: put exclusion patterns here

[wheel]
universal = 1
