

[metadata]
name = nr-documents
version = 1.0.0
description = Repository model for Nr_Documents
authors = 


[options]
python = >=3.9
install_requires =
    oarepo>=11,<12
    oarepo-runtime>=1.0.0
    nr-metadata>=1.0.0
    nr-oaipmh-harvesters>=1.0.0
    nr-vocabularies>=1.0.0
    deepmerge>=1.1.0
    oarepo-vocabularies>=2.0.0
    invenio-drafts-resources>=1.0.4
    oarepo-requests

packages = find:


[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2


[options.entry_points]
invenio_base.api_apps = nr_documents = nr_documents.ext:Nr_documentsExt
invenio_base.apps = nr_documents = nr_documents.ext:Nr_documentsExt
invenio_db.alembic = nr_documents = nr_documents:alembic
invenio_db.models = nr_documents = nr_documents.records.models
invenio_base.api_blueprints = nr_documents = nr_documents.views.records.api:create_api_blueprint
invenio_base.blueprints = nr_documents = nr_documents.views.records.app:create_app_blueprint
invenio_search.mappings = nr_documents = nr_documents.records.mappings
invenio_jsonschemas.schemas = nr_documents = nr_documents.records.jsonschemas
oarepo.models = nr_documents = nr_documents.models:records.json
invenio_i18n.translations = nr_documents = nr_documents
oarepo.ui = nr_documents = nr_documents.models:ui.json


[options.extras_require]
tests = pytest-invenio>=1.4.11
