[project]
name = "nr-docs-repository"
version = "1.0.0"
description = ""
packages = []
authors = [
    { name = "Miroslav Simek", email = "miroslav.simek@techlib.cz" },
]
dependencies = [
    "oarepo>=11,<12",
    "nr-documents @ file:///${PROJECT_ROOT}/../../models/nr-documents",
    "docs-app @ file:///${PROJECT_ROOT}/../../ui/docs-app",
    "nr-docs-extensions @ file:///${PROJECT_ROOT}/../../local/nr-docs-extensions",
    "oarepo-ui @ file:///${PROJECT_ROOT}/../../local/oarepo-ui",
    "oarepo-vocabularies @ file:///${PROJECT_ROOT}/../../local/oarepo-vocabularies",
    "site @ file:///${PROJECT_ROOT}/site",
]
requires-python = ">=3.9,<3.11"
