
[metadata]
name = docs-app
version = attr: docs_app.__version__
description = Application package for nr-documents
long_description = file: README.md
long_description_content_type = text/markdown
keywords = oarepo ui narodni-repozitar nr-documents
license = MIT
author = Miroslav Simek
author_email = miroslav.simek@techlib.cz
platforms = any
url = 
classifiers =
    Development Status :: 2 - Pre-Alpha

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
zip_safe = False
install_requires =
    oarepo-ui>=4.0.10
    # nr-documents

[options.extras_require]

[options.entry_points]
invenio_base.apps =
    docs_app = docs_app.ext:DocsAppExtension
invenio_base.api_apps =
    docs_app = docs_app.ext:DocsAppExtension
invenio_assets.webpack =
    docs_app_theme = docs_app.theme.webpack:theme
invenio_base.blueprints =
    docs_app = docs_app.views:create_blueprint


[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401
