
[metadata]
name = nr-docs

[options]
install_requires =
    oarepo-runtime
    oarepo-ui
    python-dotenv
    oarepo-vocabularies
    oarepo-requests


[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.blueprints =
    nr_docs_views = nr_docs.views:create_blueprint
invenio_assets.webpack =
    nr_docs_theme = nr_docs.webpack:theme
